--- a/flex1.html
+++ b/flex1.html
@@ -11,6 +11,9 @@
     <style>
         nav ul {
 
+            display: flex;
+            justify-content: space-between;
+
         }
     </style>
 </head>
