--- a/flex2.html
+++ b/flex2.html
@@ -11,10 +11,14 @@
     <style>
         ul {
 
+            display: flex;
+            flex-direction: row;
         }
 
         li {
-
+            flex-basis: 0;
+            flex-shrink: 1;
+            flex-grow: 1;
         }
     </style>
 </head>
