--- a/flex3.html
+++ b/flex3.html
@@ -11,10 +11,16 @@
     <style>
         .parent {
 
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: center;
+
         }
 
         .child {
-
+            display: flex;
+            align-items: center;
         }
     </style>
 </head>
