--- a/flex4.html
+++ b/flex4.html
@@ -10,11 +10,14 @@
     <!-- Modifier le code CSS suivant pour réaliser l'exercice -->
     <style>
         ul {
-
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
         }
 
         li {
-
+            display: flex;
+            flex-wrap: wrap;
         }
     </style>
 </head>
